stylings for the AboutMe page added

--- a/src/global.css
+++ b/src/global.css
@@ -11,10 +11,18 @@
   --font-macondo: 'Macondo', cursive;
   --font-kaushan: 'Kaushan Script', cursive;
   --font-karla: 'Karla', sans-serif;
+
 }
 
 body {
     font-family: var(--font-karla);
+    background-color: var(--light);
+    color: var(--medium);
+    margin: 0;
+}
+
+.main-content {
+    margin: 0 5%;
 }
 
 h1, h2 {
@@ -22,11 +30,19 @@ h1, h2 {
 }
 
 h3, p {
-    font-family: var(--font-karla);
+    font-family: var(--font-acme);
 }
 
 a {
     font-family: var(--font-acme);
+}
+
+.header-container {
+    width: 100vw;
+}
+
+.footer-container {
+    width: 100vw;
 }
 
 
