--- a/src/components/UI/Footer/Footer.css
+++ b/src/components/UI/Footer/Footer.css
@@ -5,7 +5,7 @@
 footer {
   background-color: var(--med-dark); 
   height: 85px;
-  width: 100%;
+  width: 100vw;
   display: flex;
   align-items: center;
   justify-content: center;
