--- a/src/components/UI/HeaderWithNav/Header.css
+++ b/src/components/UI/HeaderWithNav/Header.css
@@ -6,7 +6,7 @@ header {
   position: relative;
   background: url('../../../assets/images/succulent.jpg') center/cover;
   height: 300px;
-  width: 100%;
+  width: 100vw;
   display: flex;
   align-items: flex-start; 
   border-bottom: 15px solid var(--med-light);
