--- a/src/components/UI/ProfileSection/ProfileSection.css
+++ b/src/components/UI/ProfileSection/ProfileSection.css
@@ -18,11 +18,11 @@
     margin-bottom: 15px; 
   }
   
-  img {
+  .profile-pic {
     max-width: 100%;
     max-height: 300px;
     margin: auto;
-    border-radius: 20%;
+    border-radius: 30%;
     border: var(--med-light) solid 7px;
   }
   
