changed Nav.jsx, App.jsx, AboutMe.jsx, Header.css to ensure functionality that is required re indication of which page is active from the nav, including at page load which I accomplished with the useNavigate and useEffect hooks in AboutMe

--- a/src/components/UI/HeaderWithNav/Header.css
+++ b/src/components/UI/HeaderWithNav/Header.css
@@ -46,3 +46,9 @@ nav a {
   font-size: 1.5rem;
   font-weight: bolder; 
 }
+
+/* Style for the active navigation link */
+nav a.active {
+  color: var(--light); 
+  border-bottom: 3px solid var(--med-light); 
+}
