--- a/src/components/UI/ProfileSection/ProfileSection.css
+++ b/src/components/UI/ProfileSection/ProfileSection.css
@@ -22,6 +22,7 @@
     max-width: 100%;
     max-height: 300px;
     margin: auto;
+    margin-top: -50px;
     border-radius: 30%;
     border: var(--med-light) solid 7px;
   }
